Update README.md with comprehensive deployment instructions
Replaces the minimal README with full step-by-step manual deployment
guide covering prerequisites, database setup, WZ data extraction,
configuration, building, running, project structure, and troubleshooting.

https://claude.ai/code/session_015MoYhbRA3DDhJB2rRcq86q